Firefox bug : Font -weight 500 is not visible, adjusted up to 600 - Chrome looks the same

--- a/data/docfx_custom_template/styles/custom.css
+++ b/data/docfx_custom_template/styles/custom.css
@@ -345,7 +345,7 @@ img#logo {
 #page-footer > .footer a,
 #page-footer > .footer a:active,
 #page-footer > .footer a:visited {
-  font-weight: 500;
+  font-weight: 600;
   color: var(--black);
   line-height: 140%;
   font-family: var(--font-text);
@@ -542,7 +542,7 @@ div.summary.h1-class-summary * {
   margin-bottom: 1em;
   color: var(--green) !important;
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 600;
   font-family: var(--font-code);
 }
 
@@ -618,26 +618,26 @@ h1.h1-custom-display span.class-generic {
   font-size: 20px;
   margin-left: 2px;
   font-family: var(--font-code);
-  font-weight: 500;
+  font-weight: 600;
 }
 h1.h1-custom-display {
   color: var(--red);
   font-size: 16px;
   font-family: var(--font-code);
-  font-weight: 500;
+  font-weight: 600;
 }
 h1.h1-custom-display > * {
   color: var(--red);
   font-size: 16px;
   font-family: var(--font-code);
-  font-weight: 500;
+  font-weight: 600;
 }
 
 h1.h1-custom-display > .classNameHeading {
   font-size: 20px;
   color: var(--purple);
   font-family: var(--font-code);
-  font-weight: 500;
+  font-weight: 600;
   word-break: break-all;
 }
 @media screen and (max-width: 480px) {
@@ -836,7 +836,7 @@ div.custom-menu-data > h4:hover {
 .custom-keywords * {
   color: var(--red);
   font-family: var(--font-code);
-  font-weight: 500;
+  font-weight: 600;
 }
 
 .custom-keywords,
@@ -845,7 +845,7 @@ div.custom-menu-data > h4:hover {
 }
 
 .custom-name {
-  font-weight: 500;
+  font-weight: 600;
   color: var(--purple);
   font-family: var(--font-code);
 }
@@ -931,7 +931,7 @@ div.col-md-10
   * {
   color: var(--black) !important;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 div.col-md-10 > article.content.wrap > ol.navigation-list-item a,
